ref #1 # It is now possible to add projects, jobs and tasks from the UI. Code refactoring may be needed as there is some duplication. # Little changes in volunteer page so it doesn't look strange.

--- a/edward-communication/src/main/webapp/resources/index.html
+++ b/edward-communication/src/main/webapp/resources/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Volunteer Page</title>
 </head>
 <body>
-<h1> HAHA </h1>
+<h1> Volunteer Page</h1>
+Computations are performed in the background.
 </body>
 <script src="jquery-2.1.1.js"></script>
 <script src="lemming.js"></script>
