# charles - possibility to compute every part locally, closes #23 # edward - added volunteer identification by fingerprinting browser, closes #20

--- a/edward-communication/src/main/webapp/resources/index.html
+++ b/edward-communication/src/main/webapp/resources/index.html
@@ -9,6 +9,7 @@
 Computations are performed in the background.
 </body>
 <script src="jquery-2.1.1.js"></script>
+<script src="fingerprint.js"></script>
 <script src="awww.js"></script>
 <script src="edward.js"></script>
 
