closes #33 - fingerprint.js rename should be enough closes #27 - adding volunteer ip address in logs and into hash for id

--- a/edward-communication/src/main/webapp/resources/index.html
+++ b/edward-communication/src/main/webapp/resources/index.html
@@ -9,7 +9,7 @@
 Computations are performed in the background.
 </body>
 <script src="jquery-2.1.1.js"></script>
-<script src="fingerprint.js"></script>
+<script src="detect.js"></script> <!--  Renamed fingerprint.js to work around adblocks -->
 <script src="awww.js"></script>
 <script src="edward.js"></script>
 
