Added version string to UI and volunteer page html files.
Unfortunately it works only in .war and won't affect jetty runs.

--- a/edward-communication/src/main/webapp/resources/volunteer/index.html
+++ b/edward-communication/src/main/webapp/resources/volunteer/index.html
@@ -12,5 +12,5 @@ Computations are performed in the background.
 <script src="detect.js"></script> <!--  Renamed fingerprint.js to work around adblocks -->
 <script src="awww.js"></script>
 <script src="edward.js"></script>
-
+Version: ${project.version}
 </html>
