Link to volunteer page from UI, better footer in UI.

--- a/edward-communication/src/main/webapp/resources/ui/index.html
+++ b/edward-communication/src/main/webapp/resources/ui/index.html
@@ -35,7 +35,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Projects</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="volunteer">Volunteer Page</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -46,6 +46,12 @@
 		
       </div>
 	</div>
-	Version: ${project.version}
+	
+	<div class="navbar navbar-default navbar-fixed-bottom">
+<div class="container">
+  <p class="navbar-text pull-left">	Version: ${project.version}
+  </p>
+</div>
+
   </body>
 </html>
