UI: adding bottom padding to 'body' as content was sometimes hidden by footer.

--- a/edward-communication/src/main/webapp/resources/ui/index.html
+++ b/edward-communication/src/main/webapp/resources/ui/index.html
@@ -9,9 +9,8 @@
     <!-- Bootstrap -->
       <script src="js/jquery-2.1.1.js"></script>
       <link href="css/bootstrap.min.css" rel="stylesheet"/>
-      <link href="css/navbar-fixed-top.css" rel="stylesheet"/>
+      <link href="css/navbar-top-and-footer.css" rel="stylesheet"/>
       <link href="css/codemirror.css" rel="stylesheet"/>
-     <link href="css/codemirror-height.css" rel="stylesheet"/>
       <script src="js/react.js"></script>
       <script src="js/JSXTransformer.js"></script>
       <script src="js/react-router.js"></script>
