--- a/edward-communication/src/main/webapp/resources/ui/index.html
+++ b/edward-communication/src/main/webapp/resources/ui/index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Edward</title>
 
-    <!-- Bootstrap -->
-      <script src="js/jquery-2.1.1.js"></script>
-      <link href="css/bootstrap.min.css" rel="stylesheet"/>
-      <link href="css/navbar-top-and-footer.css" rel="stylesheet"/>
-      <link href="css/codemirror.css" rel="stylesheet"/>
-      <script src="js/react.js"></script>
-      <script src="js/JSXTransformer.js"></script>
-      <script src="js/react-router.js"></script>
+    <script src="js/jquery-2.1.1.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/navbar-top-and-footer.css" rel="stylesheet"/>
+    <link href="css/codemirror.css" rel="stylesheet"/>
+    <script src="js/react.js"></script>
+    <script src="js/JSXTransformer.js"></script>
+    <script src="js/react-router.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/codemirror.js"></script>
-    <script src="js/codemirror-javascript.js"></script>
-	<script type="text/jsx" src="js/edward.jsx"></script>
-  </head>
-  <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
+    <script type="text/jsx" src="js/edward.jsx"></script>
+</head>
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Edward</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Edward</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="volunteer">Volunteer Page</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-	
-	<div class="container">
-      <div id="currentContent">
-		
-      </div>
-	</div>
-	
-	<div class="navbar navbar-default navbar-fixed-bottom">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Projects</a></li>
+                <li><a href="volunteer">Volunteer Page</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
-  <p class="navbar-text pull-left">	Version: ${project.version}
-  </p>
+    <div id="currentContent">
+
+    </div>
 </div>
 
-  </body>
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+        <p class="navbar-text pull-left"> Version: ${project.version}
+        </p>
+    </div>
+
+</body>
 </html>
