Display number of connected volunteers in footer.

--- a/edward-communication/src/main/webapp/resources/ui/index.html
+++ b/edward-communication/src/main/webapp/resources/ui/index.html
@@ -47,7 +47,7 @@
 
 <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <p class="navbar-text pull-left"> Version: ${project.version}
+        <p class="navbar-text pull-left"> Version: ${project.version} |  Connected volunteers: <span id="connectedVolunteers"></span>
         </p>
     </div>
 
