Moving from .war packaging to a executable jar and Spring Boot. * Moving front-end files to /resources/static so that Spring MVC from Spring Boot can serve them automatically * Creating the Start class that is an entry point to the application * Adding spring boot dependencies and a "fat" jar creating plugin * Using typesafe config library to read the configuration * Dividing spring context setup into multiple configurations * Making sure database schema is set up when app starts if it cannot find one

--- a/edward-communication/src/main/resources/static/index.html
+++ b/edward-communication/src/main/resources/static/index.html
@@ -47,9 +47,10 @@
 
 <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <p class="navbar-text pull-left"> Version: ${project.version} |  Connected volunteers: <span id="connectedVolunteers"></span>
+        <p class="navbar-text pull-left"> Version: ${project.version} | Connected volunteers: <span
+                id="connectedVolunteers"></span>
         </p>
     </div>
-
+</div>
 </body>
 </html>
