Handling version-info passing via JAR manifest and REST API instead of maven filtering which didn't work reliably and caused issues.

--- a/edward-communication/src/main/resources/static/volunteer/index.html
+++ b/edward-communication/src/main/resources/static/volunteer/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Volunteer Page</title>
+    <meta charset="UTF-8">
+    <title>Volunteer Page</title>
 </head>
 <body>
 <h1> Volunteer Page</h1>
@@ -11,8 +11,9 @@ Computations are performed in the background.
 <script src="jquery-2.1.1.js"></script>
 <script src="awww.js"></script>
 <script src="edward.js"></script>
+<script src="frontend.js"></script>
 
-<br> 
+<br>
 
-Version: ${project.version}
+Version: <span id="version"> </span>
 </html>
