--- a/edward-communication/src/main/resources/static/index.html
+++ b/edward-communication/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
 
 <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <p class="navbar-text pull-left"> Version: ${project.version} | Connected volunteers: <span
+        <p class="navbar-text pull-left"> Version: <span id="version"></span> | Connected volunteers: <span
                 id="connectedVolunteers"></span>
         </p>
     </div>
