Bring back basic authentication using Spring Security. * Reading project owner from spring security so that project is owned by the currently logged in user (change in rest api - no owner id longer needed when creating project) * Mocking spring security in tests. * Minor regactorings in JS filres

--- a/edward-communication/src/main/resources/static/index.html
+++ b/edward-communication/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <script src="js/react-router.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/codemirror.js"></script>
+    <script src="js/edward-internal-api.js"></script>
     <script type="text/jsx" src="js/edward.jsx"></script>
 </head>
 <body>
